Remove invalid flows from instructor comment actions